--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,30 @@ html, body {
   transition: 0.1s;
 }
 a {
+  position: relative;
   text-decoration: inherit;
 }
 
-/* herSection css */
-.hero-section{
-  animation: slideshow 40s infinite; 
+/* header */
+.menu::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 2px;
+  background-color:#8ec038;
+  transition: all 0.5s ease;
 }
+.menu:hover::before{
+  width: 100%;
+ }
+
+/* herSection css start*/
+.hero-section{
+  animation: slideshow 40s  infinite; 
+}
+
 @keyframes slideshow {
   0% {
     background-image: url('./assets/img/food1.webp');
@@ -62,4 +79,27 @@ a {
   100% {
     background-image: url('./assets/img/food3.jpg');
   }
+}
+
+button{
+  position: relative;
+  overflow: hidden; 
+  z-index: 1;
+}
+button::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.6s ease;
+  z-index: -1; 
+  background-color: aquamarine;
+  background:rgb(23, 22, 22);
+  left: -100%;
+}
+
+button:hover::before {
+  left: 0;
 }
