--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@ html, body {
 
 .custom-cursor {
   position: fixed;
-  width: 10px;
-  height: 10px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   background-color: black;
   pointer-events: none;
@@ -55,37 +55,24 @@ a {
 @keyframes slideshow {
   0% {
     background-image: url('./assets/img/food1.webp');
-    filter: grayscale(100%) brightness(50%);
   }
   20% {
     background-image: url('./assets/img/food2.jpg');
-    filter: grayscale(100%) brightness(50%);
-
   }
   40% {
     background-image: url('./assets/img/food3.jpg');
-    filter: grayscale(100%) brightness(50%);
-
   }
   60% {
     background-image: url('./assets/img/food5.jpg');
-    filter: grayscale(0%) brightness(50%);
-
   }
   80% {
     background-image: url('./assets/img/food6.webp');
-    filter: grayscale(100%) brightness(50%);
-
   }
   100% {
-
     background-image: url('./assets/img/food7.jpg');
-    filter:grayscale(100%) brightness(50%);
-
   }
 }
-
-
+/* button first animation */
 /* button{
   position: relative;
   overflow: hidden; 
@@ -107,3 +94,32 @@ button::before{
 button:hover::before {
   left: 0;
 } */
+.welcome{
+  position: relative;
+  
+}
+.welcome::before{
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: -8%;
+  width: 20%;
+  height: 3px;
+  border-radius: 30px;  background-color: #8ec038;
+}
+
+/* section 2,3 */
+.secttion2-subtitle{
+  position: relative;
+
+}
+.secttion2-subtitle::before{
+  position: absolute;
+  content: "";
+  top: 47%;
+  left: -20%;
+  width: 28%;
+  height: 4px;
+  border-radius: 30px;  background-color: #8ec038;
+}
+/* button second animation */ 
