--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,9 @@ a {
     background-image: url('./assets/img/food7.jpg');
   }
 }
+
 /* button first animation */
-/* button{
+button{
   position: relative;
   overflow: hidden; 
   z-index: 1;
@@ -93,7 +94,8 @@ button::before{
 
 button:hover::before {
   left: 0;
-} */
+}
+ 
 .welcome{
   position: relative;
   
@@ -102,8 +104,8 @@ button:hover::before {
   position: absolute;
   content: "";
   top: 50%;
-  left: -8%;
-  width: 20%;
+  left: -15%;
+  width: 22%;
   height: 3px;
   border-radius: 30px;  background-color: #8ec038;
 }
@@ -111,7 +113,6 @@ button:hover::before {
 /* section 2,3 */
 .secttion2-subtitle{
   position: relative;
-
 }
 .secttion2-subtitle::before{
   position: absolute;
@@ -120,6 +121,11 @@ button:hover::before {
   left: -20%;
   width: 28%;
   height: 4px;
-  border-radius: 30px;  background-color: #8ec038;
+  border-radius: 30px;
+  background-color: #8ec038;
 }
-/* button second animation */ 
+
+/* pagination next previous */ 
+.swiper-pagination{
+  display: none;
+}
